Fixed layout issue. Content now centered, instructions box correct size

--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -1,20 +1,15 @@
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
 body {
-  padding-bottom: 40px;
+  margin-bottom: 60px;
   color: #5a5a5a;
+  text-align: center;
 }
 
 #show-profile {
   color: black;
 }
 
-/* CUSTOMIZE THE NAVBAR
--------------------------------------------------- */
+/* navbar */
 
-/* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
   position: absolute;
   top: 0;
@@ -36,17 +31,16 @@ body {
   width: auto;
 }
 
-/* Carousel base class */
+/* Carousel */
 .carousel {
   height: 500px;
   margin-bottom: 60px;
 }
-/* Since positioning the image, we need to help out the caption */
+
 .carousel-caption {
   z-index: 10;
 }
 
-/* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
   background-color: #777;
@@ -88,8 +82,7 @@ body {
   letter-spacing: -1px;
 }
 
-
-/* RESPONSIVE CSS */
+/* responsive */
 
 @media (min-width: 768px) {
   /* Navbar positioning foo */
@@ -105,7 +98,6 @@ body {
     padding-left: 0;
   }
 
-  /* The navbar becomes detached from the top, so we round the corners */
   .navbar-wrapper .navbar {
     border-radius: 4px;
   }
@@ -128,46 +120,38 @@ body {
   }
 }
 
-/* Contact Us Table */
+/*  Create Listing Page */
 
-.contact-form {
+.create-post {
   padding-top: 75px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
 
-form {
-  display:table;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-form textarea {
-  width: 500px;
-  height: 300px;
-  font-family: Courier, serif;
-}
-
-.table {
-  display: table-row;
-  text-align: right;
-}
-
-.table p {
+.create-post input {
   display: table-cell;
   vertical-align: top;
-  padding: 5px;
-}
-
-.comment {
-  display: table-row;
-  text-align: left;
-}
-
-.submit {
+  padding: 10px;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  content: center;
 }
+
+.center-block {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+textarea {
+  height: 300px;
+  width: 700px;
+}
+
+
+/* handlebars */
 
 #profilehtml {
   margin: 250px;
@@ -179,4 +163,13 @@ form textarea {
 
 #show-project img {
   width: 200px;
+}
+
+/* footer */
+
+.footer {
+  position: absolute;
+  margin: 30px 0px 0px 0px;
+  width: 100%;
+  height: 60px;
 }
